--- a/resume.html
+++ b/resume.html
@@ -41,14 +41,14 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">Current</div>
                             <div class="flex-three-quarters"><b>MSc Health Data Science</b>
-                                <br><i class="badge text-bg-secondary">University of New South Wales</i>
+                                <br><i class="text-bg-secondary p-3">University of New South Wales</i>
                                 <br>Expected graduation in September 2024
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
                             <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
-                                <br><i>The New School</i>
+                                <br><i class="text-bg-secondary p-3">The New School</i>
                                 <br>BFA Illustration, Parsons School of Design (with honors and special recognition)
                                 (3.99
                                 GPA)
@@ -60,28 +60,28 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018-2022</div>
                             <div class="flex-three-quarters"><b>Dean’s BFA Scholarship</b>
-                                <br><i>The New School</i>
+                                <br><i class="text-bg-secondary p-3">The New School</i>
                                 <br>Four-year tuition scholarship.
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018-2022</div>
                             <div class="flex-three-quarters"><b>Dean’s List</b>
-                                <br><i>The New School</i>
+                                <br><i class="text-bg-secondary p-3">The New School</i>
                                 <br>Awarded each semester for scoring a GPA of 3.7 or higher.
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018</div>
                             <div class="flex-three-quarters"><b>International Baccalaureate Diploma</b>
-                                <br><i >Canadian International School of Hong Kong</i>
+                                <br><i class="text-bg-secondary p-3">Canadian International School of Hong Kong</i>
                                 <br>Score: 38
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018</div>
                             <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
-                                <br><i>Canadian International School of Hong Kong</i>
+                                <br><i class="text-bg-secondary p-3">Canadian International School of Hong Kong</i>
                                 <br>Score: 93%
                             </div>
                         </div>
@@ -89,34 +89,54 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2022</div>
                             <div class="flex-three-quarters"><b>Receptionist and Administration Assistant</b>
-                                <br><i>The Paediatric Clinic at North Shore Private Hospital</i>
+                                <br><i class="text-bg-secondary p-3">The Paediatric Clinic at North Shore Private Hospital</i>
                                 <ul>
-                                    <li>Retrieved patient files from other practices and managed them on the specialist software Genie</li>
-                                    <li>Scheduled and organized appointments, being aware of the time commitments required for patients and clinicians alike</li>
-                                    <li>Arranged billing, Medicare, and other payments to and from the clinic</li>
-                                    <li>Greeted patients and their guardians at the clinic, ensuring a warm and welcoming environment</li>
+                                    <li>Retrieved patient files from other practices and managed them on the specialist software Genie.</li>
+                                    <li>Scheduled and organized appointments, being aware of the time commitments required for patients and clinicians alike.</li>
+                                    <li>Arranged billing, Medicare, and other payments to and from the clinic.</li>
+                                    <li>Greeted patients and their guardians at the clinic, ensuring a warm and welcoming environment.</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2022</div>
                             <div class="flex-three-quarters"><b>Animator</b>
-                                <br><i>The New Historia</i>
-                                <br>Score: 93%
+                                <br><i class="text-bg-secondary p-3">The New Historia</i>
+                                <ul>
+                                    <li>Worked with organizers at The New Historia to plan out design specifications and subjects for illustration.</li>
+                                    <li>Illustrated and animated looped animations on Photoshop.</li>
+                                    <li>Publicly presented our work at the City of Ladies exhibition, first shown on April 9th, 2022 across from Central Park.</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="flex-container">
-                            <div class="flex-one-quarter">2018</div>
-                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
-                                <br><i>Canadian International School of Hong Kong</i>
-                                <br>Score: 93%
+                            <div class="flex-one-quarter">2020-2022</div>
+                            <div class="flex-three-quarters"><b>Secretary and Assistant</b>
+                                <br><i class="text-bg-secondary p-3">School of Art, Media and Technology at Parsons School of Design</i>
+                                <ul>
+                                    <li>Assisted the AMT department with various tasks such as monitoring classes, community outreach, event invitations and designing posters.</li>
+                                    <li>Updated and maintained the department’s blogs, social media and websites.</li>
+                                    <li>Organized, archived and retrieved confidential annual documents for faculty and classes.</li>
+                                    <li>Helped to facilitate public gallery openings at the university.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex-container">
+                            <div class="flex-one-quarter">2020 & 2021</div>
+                            <div class="flex-three-quarters"><b>Summer Intensive Studies Teaching Assistant</b>
+                                <br><i class="text-bg-secondary p-3">The New School - Open Campus</i>
+                                <ul>
+                                    <li>Assisted professors in teaching courses in graphic design, illustration and animation for high school students.</li>
+                                    <li>Lead classes on digital technical skills such as producing vector illustrations in Adobe Illustrator and compositing in Adobe After Effects.</li>
+                                    <li>Individually helped students who needed exta technical support.</li>
+                                </ul>
                             </div>
                         </div>
                         <h4 id="resume-item-4">Volunteering, Projects and Interests</h4>
                         <div class="flex-container">
-                            <div class="flex-one-quarter">2018</div>
-                            <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
-                                <br><i>Canadian International School of Hong Kong</i>
+                            <div class="flex-one-quarter">2024</div>
+                            <div class="flex-three-quarters"><b>Health Data Science Dissertation</b>
+                                <br><i>University of New South Wales</i>
                                 <br>Score: 93%
                             </div>
                         </div>
