--- a/resume.html
+++ b/resume.html
@@ -41,14 +41,14 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">Current</div>
                             <div class="flex-three-quarters"><b>MSc Health Data Science</b>
-                                <br><i class="text-bg-secondary p-3">University of New South Wales</i>
+                                <br><i class="text-bg-secondary">University of New South Wales</i>
                                 <br>Expected graduation in September 2024
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018-2022<br>GPA: 3.99</div>
                             <div class="flex-three-quarters"><b>BA/BFA Dual-Degree Program</b>
-                                <br><i class="text-bg-secondary p-3">The New School</i>
+                                <br><i class="text-bg-secondary">The New School</i>
                                 <br>BFA Illustration, Parsons School of Design (with honors and special recognition)
                                 (3.99
                                 GPA)
@@ -60,28 +60,28 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018-2022</div>
                             <div class="flex-three-quarters"><b>Dean’s BFA Scholarship</b>
-                                <br><i class="text-bg-secondary p-3">The New School</i>
+                                <br><i class="text-bg-secondary">The New School</i>
                                 <br>Four-year tuition scholarship.
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018-2022</div>
                             <div class="flex-three-quarters"><b>Dean’s List</b>
-                                <br><i class="text-bg-secondary p-3">The New School</i>
+                                <br><i class="text-bg-secondary">The New School</i>
                                 <br>Awarded each semester for scoring a GPA of 3.7 or higher.
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018</div>
                             <div class="flex-three-quarters"><b>International Baccalaureate Diploma</b>
-                                <br><i class="text-bg-secondary p-3">Canadian International School of Hong Kong</i>
+                                <br><i class="text-bg-secondary">Canadian International School of Hong Kong</i>
                                 <br>Score: 38
                             </div>
                         </div>
                         <div class="flex-container">
                             <div class="flex-one-quarter">2018</div>
                             <div class="flex-three-quarters"><b>Ontario Secondary School Diploma</b>
-                                <br><i class="text-bg-secondary p-3">Canadian International School of Hong Kong</i>
+                                <br><i class="text-bg-secondary">Canadian International School of Hong Kong</i>
                                 <br>Score: 93%
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2022</div>
                             <div class="flex-three-quarters"><b>Receptionist and Administration Assistant</b>
-                                <br><i class="text-bg-secondary p-3">The Paediatric Clinic at North Shore Private Hospital</i>
+                                <br><i class="text-bg-secondary">The Paediatric Clinic at North Shore Private Hospital</i>
                                 <ul>
                                     <li>Retrieved patient files from other practices and managed them on the specialist software Genie.</li>
                                     <li>Scheduled and organized appointments, being aware of the time commitments required for patients and clinicians alike.</li>
@@ -101,7 +101,7 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2022</div>
                             <div class="flex-three-quarters"><b>Animator</b>
-                                <br><i class="text-bg-secondary p-3">The New Historia</i>
+                                <br><i class="text-bg-secondary">The New Historia</i>
                                 <ul>
                                     <li>Worked with organizers at The New Historia to plan out design specifications and subjects for illustration.</li>
                                     <li>Illustrated and animated looped animations on Photoshop.</li>
@@ -112,7 +112,7 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2020-2022</div>
                             <div class="flex-three-quarters"><b>Secretary and Assistant</b>
-                                <br><i class="text-bg-secondary p-3">School of Art, Media and Technology at Parsons School of Design</i>
+                                <br><i class="text-bg-secondary">School of Art, Media and Technology at Parsons School of Design</i>
                                 <ul>
                                     <li>Assisted the AMT department with various tasks such as monitoring classes, community outreach, event invitations and designing posters.</li>
                                     <li>Updated and maintained the department’s blogs, social media and websites.</li>
@@ -124,7 +124,7 @@
                         <div class="flex-container">
                             <div class="flex-one-quarter">2020 & 2021</div>
                             <div class="flex-three-quarters"><b>Summer Intensive Studies Teaching Assistant</b>
-                                <br><i class="text-bg-secondary p-3">The New School - Open Campus</i>
+                                <br><i class="text-bg-secondary">The New School - Open Campus</i>
                                 <ul>
                                     <li>Assisted professors in teaching courses in graphic design, illustration and animation for high school students.</li>
                                     <li>Lead classes on digital technical skills such as producing vector illustrations in Adobe Illustrator and compositing in Adobe After Effects.</li>
