--- a/art.html
+++ b/art.html
@@ -30,7 +30,7 @@
         </li>
       </ul>
 
-        <img width="35%" class="justify-content-center" src="https://www.dropbox.com/scl/fi/drd8ot7q848160r4g6bns/competition-piece-small.png?rlkey=nb3m5vx1l0zt9hdbrfvg8tcho&raw=1">
+        <img width="35%" class="justify-content-center" src="https://www.dropbox.com/scl/fi/0v0tjpbzl2l8k8i2a4sdp/competition-piece-small.jpg?rlkey=5ehjc6m4obzuaidi3rsy8z6l1&raw=1">
 
     <footer>
         <div id="bottomBar"></div>
