--- a/art.html
+++ b/art.html
@@ -29,9 +29,20 @@
           <a class="nav-link active" aria-current="page" href="art.html">Illustration</a>
         </li>
       </ul>
-
-        <img width="35%" class="justify-content-center" src="https://www.dropbox.com/scl/fi/0v0tjpbzl2l8k8i2a4sdp/competition-piece-small.jpg?rlkey=5ehjc6m4obzuaidi3rsy8z6l1&raw=1">
-
+<div class="flex-container">
+        <img class="flex-one-half" src="https://www.dropbox.com/scl/fi/0v0tjpbzl2l8k8i2a4sdp/competition-piece-small.jpg?rlkey=5ehjc6m4obzuaidi3rsy8z6l1&raw=1">
+        <div class="flex-one-half">
+            <h4>Contents</h4>
+            <ul>
+                <li><a href="art/publications.html">Illustration</a></li>
+                <li><a href="art/publications.html">Character Design</a></li>
+                <li><a href="art/publications.html">Animation</a></li>
+                <li><a href="art/publications.html">3D Modelling</a></li>
+                <li><a href="art/publications.html">Collaborations</a></li>
+                <li><a href="art/publications.html">Publications</a></li>
+            </ul>
+        </div>
+</div>
     <footer>
         <div id="bottomBar"></div>
     </footer>
