--- a/headers.html
+++ b/headers.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg" id="headbar" style="background-color: #fde3e3;">
   <div class="container-fluid">
-    <p class="navbar-brand">💭S.K. PORTFOLIO</p>
+    <h1 class="navbar-brand">💭S.K. PORTFOLIO</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
