--- a/art/publications.html
+++ b/art/publications.html
@@ -23,8 +23,8 @@
     <main>
       <div class="flex-container">
           <img class="flex-one-third" data-bs-toggle="modal" data-bs-target="#bandoriZine" src="https://www.dropbox.com/scl/fi/yakhyruog9sugdjs2f5vd/floral-skirts-and-woolen-boots.png?rlkey=jscbyr0656zodc80thepqedkl&raw=1">
-          <img class="flex-one-third" src="">
-          <img class="flex-one-third" src="">
+          <img class="flex-one-third" data-bs-toggle="modal" data-bs-target="#bandoriZine" src="https://www.dropbox.com/scl/fi/yakhyruog9sugdjs2f5vd/floral-skirts-and-woolen-boots.png?rlkey=jscbyr0656zodc80thepqedkl&raw=1">
+          <img class="flex-one-third" data-bs-toggle="modal" data-bs-target="#bandoriZine" src="https://www.dropbox.com/scl/fi/yakhyruog9sugdjs2f5vd/floral-skirts-and-woolen-boots.png?rlkey=jscbyr0656zodc80thepqedkl&raw=1">
       </div>
       <div class="flex-container">
           <img class="flex-one-third" src="">
@@ -38,7 +38,7 @@
       </div>
 
       <div class="modal fade" id="bandoriZine" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Floral Skirts and Woolen Boots</h1>
