--- a/art/publications.html
+++ b/art/publications.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--My CSS file-->
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/sk-etcher/portfolio/main/styles.css">
     <title>title</title>
 
 
@@ -78,7 +78,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
         <!--My JS file-->
-    <script src="scripts/script.js"></script>
+    <script src="https://raw.githubusercontent.com/sk-etcher/portfolio/main/scripts/script.js"></script>
 </body>
 
 </html>
