--- a/headers.html
+++ b/headers.html
@@ -8,29 +8,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="code.html">Interactive</a>
+          <a class="nav-link" href="https://sk-etcher.github.io/portfolio/code.html">Interactive</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="art.html">Illustration</a>
+          <a class="nav-link" href="https://sk-etcher.github.io/portfolio/art.html">Illustration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="https://sk-etcher.github.io/portfolio/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume.html">CV</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+          <a class="nav-link" href="https://sk-etcher.github.io/portfolio/resume.html">CV</a>
         </li>
       </ul>
     </div>
